--- a/website.html
+++ b/website.html
@@ -1,5 +1,8 @@
 <html>
-  <head><title>Fake Major Test</head></title>
+  <head>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Fake Major Test</title>
+  </head>
   <script language="JavaScript">
     var info=document.getElementsByName("info");
     function testMajor(){
@@ -11,7 +14,9 @@
       }
     }
   </script>
-  <body><form>
+  <body>
+    <h1><center>Test and see if you have a fake major</h1></center>
+    <form>
     Enter First Name<input type="text" value="" size="20" maxlength="30" name="info"><br>
     Enter Last Name<input type="text" value="" size="20" maxlength="30" name="info"><br>
     Enter Major<input type="text" value="" size="20" maxlength="30" name="info"><br>
