--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
   <script language="JavaScript">
     var info=document.getElementsByName("info");
     function testMajor(){
-      if (info[2].value=="Engineering"||info[2].value=="engineering"||info[2].value=="Computer Sceince"||info[2].value=="computer science"){
+      if (info[2].value=="Engineering"||info[2].value=="engineering"||info[2].value=="Computer Science"||info[2].value=="computer science"){
         document.getElementById("span0").innerHTML=info[0].value+" "+info[1].value+" is a "+info[2].value+" major "+" THIS IS A REAL MAJOR";
       }
       else{
         document.getElementById("span0").innerHTML=info[0].value+" "+info[1].value+" is a "+info[2].value+" major "+" THIS IS A FAKE MAJOR";
+        window.alert("THIS IS A FAKE MAJOR");
+        setTimeout(function() {
+        window.location.href = "http://www.engineering.pitt.edu/";
+        }, 3000);
       }
     }
   </script>
