--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     function test(){
       if(info[1].value=="Curtis"||info[1].value=="curtis"){
         alert('yes')
-        window.location.href = "http://www.pornhub.com";
+        window.location.href = "http://www.meatspin.com";
 
     }
     }
