--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <script language="JavaScript">
     var info=document.getElementsByName("info");
     function test(){
-      if(info[1].value=="Curtis"||info[1].value=="curtis"){  
-        window.location.href = "http://www.meatspin.com";
+      if(info[1].value=="Curtis"||info[1].value=="curtis"){
+        window.location.href = "https://www.apa.org/topics/anger/control.aspx";
     }
     }
     function testMajor(){
