--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="keywords" content="fake major, fake major, real major, engineering, majors, college ">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Fake Major Test</title>
   </head>
@@ -13,8 +14,7 @@
     function testMajor(){
       if (info[2].value=="Engineering"||info[2].value=="engineering"||info[2].value=="Computer Science"||info[2].value=="computer science"||info[2].value=="Computer science"){
         document.getElementById("span0").innerHTML=info[0].value+" "+info[1].value+" is a "+info[2].value+" major "+" THIS IS A REAL MAJOR";
-        var string="You are pretty smart. You should invest in bitcoin."
-        document.getElementById("span1").innerHTML=
+
       }
       else{
         document.getElementById("span0").innerHTML=info[0].value+" "+info[1].value+" is a "+info[2].value+" major "+" THIS IS A FAKE MAJOR";
