--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html>
   <head>
-    <meta name="keywords" content="fake major, fake major, real major, engineering, majors, college ">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Fake Major Test</title>
   </head>
   <script language="JavaScript">
     var info=document.getElementsByName("info");
     function test(){
-      if(info[1].value=="Curtis"||info[1].value=="curtis"||info[1]=="Sam"||info[1]=="sam"){
+      if(info[1].value=="Curtis"||info[1].value=="curtis"||info[1]=="SmallWood"||info[1]=="smallwood"){
         window.location.href = "http://locator.apa.org/?_ga=2.82945119.816090229.1512169170-689436425.1512169170";
       }
     }
