--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script language="JavaScript">
     var info=document.getElementsByName("info");
     function test(){
-      if(info[1].value=="Curtis"||info[1].value=="curtis"||info[1]=="SmallWood"||info[1]=="smallwood"){
+      if(info[1].value=="Curtis"||info[1].value=="curtis"||info[1]=="SmallWood"||info[1]=="smallwood"||info[1]=="Kuzy"||info[1]=="kuzy"){
         window.location.href = "http://locator.apa.org/?_ga=2.82945119.816090229.1512169170-689436425.1512169170";
       }
     }
