--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       }
     }
     </script>
-      <h1><center>Test and see if you have a fake major</h1></center>
+      <h1><center>Test to see if you have a fake major</h1></center>
       <form>
       Enter First Name<input type="text" value="" size="20" maxlength="30" name="info"><br>
       Enter Last Name<input type="text" value="" size="20" maxlength="30" name="info"><br>
